RESOLVED FIXED137778
[EFL] window.screen.width returns wrong value if more displays are available
https://bugs.webkit.org/show_bug.cgi?id=137778
Summary [EFL] window.screen.width returns wrong value if more displays are available
Grzegorz Czajkowski
Reported 2014-10-16 07:56:32 PDT
ecore_x_screen_size_get() retrieves the size of Ecore_X_Screen, for example, having two displays of 1680x1050, it will return 33600x1050. Unlike EFL's MiniBrowser, Firefox and Chrome return screen of the current display.
Attachments
Patch (2.03 KB, patch)
2014-10-16 08:02 PDT, Grzegorz Czajkowski
no flags
Patch for landing (2.06 KB, patch)
2014-10-17 02:32 PDT, Grzegorz Czajkowski
no flags
Grzegorz Czajkowski
Comment 1 2014-10-16 08:02:17 PDT
Jinwoo Song
Comment 2 2014-10-17 00:23:27 PDT
Looks good to me.
Gyuyoung Kim
Comment 3 2014-10-17 00:29:20 PDT
Comment on attachment 239948 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=239948&action=review > Source/WebCore/platform/efl/PlatformScreenEfl.cpp:94 > + if (ecore_x_randr_query() && ecore_x_window_focus_get()) ecore_x_window_focus_get() is called twice. How about using a variable to handle it ? Ecore_X_Window focusedWindow = ecore_x_window_focus_get();
Grzegorz Czajkowski
Comment 4 2014-10-17 02:32:29 PDT
Created attachment 240008 [details] Patch for landing
Grzegorz Czajkowski
Comment 5 2014-10-17 02:34:46 PDT
(In reply to comment #3) > Comment on attachment 239948 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=239948&action=review > > > Source/WebCore/platform/efl/PlatformScreenEfl.cpp:94 > > + if (ecore_x_randr_query() && ecore_x_window_focus_get()) > > ecore_x_window_focus_get() is called twice. How about using a variable to > handle it ? > > Ecore_X_Window focusedWindow = ecore_x_window_focus_get(); Nice catch! Fixed.
WebKit Commit Bot
Comment 6 2014-10-17 03:43:59 PDT
Comment on attachment 240008 [details] Patch for landing Clearing flags on attachment: 240008 Committed r174819: <http://trac.webkit.org/changeset/174819>
WebKit Commit Bot
Comment 7 2014-10-17 03:44:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.