[EFL] window.screen.width returns wrong value if more displays are available https://bugs.webkit.org/show_bug.cgi?id=137778

Reviewed by Gyuyoung Kim.

ecore_x_screen_size_get() retrieves the size of Ecore_X_Screen, for example,
having two displays of 1680x1050, it will return 3360x1050.

Unlike EFL's MiniBrowser, Firefox and Chrome return screen of the current display.

No new tests. Hardware specific bug including multiple displays.

* platform/efl/PlatformScreenEfl.cpp:
(WebCore::screenRect):
Use ecore's xrandr to determine the screen on which browser window is displayed.


Canonical link: https://commits.webkit.org/155677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174819 268f45cc-cd09-0410-ab3c-d52691b4dbfc